Create separate auth url and move functionality to auth service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,6 @@
 
 <h1>Welcome to IG Connect</h1>
 
-<app-authorise></app-authorise>
+<button class="btn btn-primary" (click)="checkAuth()">Check Authorisation</button>
+
+
