--- a/src/app/authorise/authorise.component.html
+++ b/src/app/authorise/authorise.component.html
@@ -1,6 +1,8 @@
 <p>Let's find my most used IG emojis in captions... </p>
 
-<button class="btn btn-primary" (click)="checkAuth()">Check Authorisation</button>
+
+<button class="btn btn-primary" (click)="sendRequest()">Send Request</button>
+
 
 <div *ngIf="authoriseFail">
   {{ errorMessage }}
